# INSTINCT

./: .clang-format  .clang-tidy  .cmake-format.yaml  .cppcheck-suppressions-list  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  ARMA_8hpp.html  ARMA_8hpp.js  ARMA_8hpp_source.html  Algorithm_8hpp.html  Algorithm_8hpp.js  Algorithm_8hpp_source.html  AllanDeviation_8hpp.html  AllanDeviation_8hpp.js  AllanDeviation_8hpp_source.html  Antenna_8hpp.html  Antenna_8hpp.js  Antenna_8hpp_source.html  AntexReader_8hpp.html  AntexReader_8hpp.js  AntexReader_8hpp_source.html  AppLogic_8hpp.html  AppLogic_8hpp.js  AppLogic_8hpp_source.html  Array_8hpp.html  Array_8hpp.js  Array_8hpp_source.html  ArubaSensor_8hpp.html  ArubaSensor_8hpp.js  ArubaSensor_8hpp_source.html  Assert_8h.html  Assert_8h.js  Assert_8h_source.html  AssociatedLegendre_8hpp.html  AssociatedLegendre_8hpp.js  AssociatedLegendre_8hpp_source.html  Atmosphere_2Functions_8hpp.html  Atmosphere_2Functions_8hpp.js  (+2864 more)
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  ExamplePage_Sub1.dox  Hierarchy.dox  LatexHeader.tex  Overview.dox  cite.bib  customdoxygen.css  eigen_navtree_hacks.js  footer.html  header.html  latex2  mathjax-config.js
doc/algorithms/: algorithms_landing_page.dox
doc/algorithms/GNSS/: SppBasics.dox  SppKF.dox  SppLSE.dox
doc/algorithms/Inertial/: ImuIntegrator_e.dox  ImuIntegrator_n.dox  LooselyCoupledKF_e.dox  LooselyCoupledKF_n.dox
doc/algorithms/KalmanFilter/: KalmanFilterBasics.dox
doc/algorithms/Simulator/: ImuSimulator.dox
doc/core/: Core.dox  Nodes.dox
doc/coverage/: gcovr.cfg  lcovrc  prolog.html
doc/developer_manual/: Nodes.dox  developer_manual.dox
doc/general_pages/: Overview.dox  introduction.dox
doc/images/: csvFileNode.png~  flowDots.png~  matrixLoggerNode.png~  nmeaFileNode.png~  posVelAttLogger.png~  rinexNavFileNode.png~  rinexObsFileNode.png~  rtklibPosConverter.png~  rtklibPosFileNode.png~  smallFlow.png~
doc/internal/: FlowDataProcessingLogic.drawio  Node-States.drawio
doc/tutorials/: Tutorial_NMEA.dox  Tutorials.dox
doc/user_manual/: user_manual_landing_page.dox
doc/user_manual/getting_started/: getting_started.dox  node_connections.dox
doc/user_manual/node guide/: experimental_node.dox  node_guide.dox  node_guide_landing_page.dox  plot_node.dox
gui/: CMakeLists.txt  main.cpp  models.hpp
lib/emlidlib/: CMakeLists.txt
lib/kvhlib/: CMakeLists.txt
lib/navio/: CMakeLists.txt
lib/uartsensor/: CMakeLists.txt
lib/ubloxlib/: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  DataCallback.cpp  DataCallback.hpp  FlowManager.cpp  FlowManager.hpp  Link.hpp  Node.hpp  NodeCreator.cpp  NodeCreator.hpp  NodeInterface.cpp  NodeInterface.hpp  NodeManager.cpp  NodeManager.hpp  NodeRegistry.cpp  NodeRegistry.hpp  Pin.cpp  Pin.hpp  main.cpp
src/DataProcessor/: DataProcessor.cpp  DataProcessor.hpp
src/DataProcessor/DataLogger/: DataLogger.cpp  DataLogger.hpp
src/DataProcessor/UsbSync/: UsbSyncSignal.cpp  UsbSyncSignal.hpp
src/DataProvider/: DataProvider.cpp  DataProvider.hpp  InsObs.hpp
src/DataProvider/GNSS/: Gnss.cpp  Gnss.hpp
src/DataProvider/IMU/: Imu.cpp  Imu.hpp
src/DataProvider/Protocol/: FileReader.cpp  UartSensor.hpp
src/InsUtils/: Integrator.hpp
src/Navigation/: Constants.hpp
src/Navigation/Atmosphere/: Functions.cpp  Functions.hpp
src/Navigation/Ellipsoid/: Ellipsoid.cpp  Ellipsoid.hpp
src/Navigation/GNSS/: Errors.cpp  Errors.hpp  Functions.cpp  Functions.hpp  SNRMask.cpp  SNRMask.hpp
src/Navigation/Geoid/: EGM96.cpp  EGM96.hpp
src/Navigation/Gravity/: Gravity.cpp  Gravity.hpp
src/Navigation/INS/: Functions.cpp  Functions.hpp  InertialIntegrator.cpp  InertialIntegrator.hpp  Mechanization.cpp  Mechanization.hpp  ProcessNoise.cpp  ProcessNoise.hpp  Units.cpp  Units.hpp
src/Navigation/Math/: Attitude.cpp  Attitude.hpp  CubicSpline.cpp  CubicSpline.hpp  KalmanFilter.hpp  KeyedKalmanFilter.hpp  KeyedLeastSquares.hpp  LeastSquares.hpp  ManagedKalmanFilter.hpp  Math.cpp  (+10 more)
src/NodeData/: InsObs.hpp  NodeData.hpp  VectorNavBinaryOutput.hpp
src/Nodes/: DataCallback.cpp  DataCallback.hpp  ExampleNode.cpp  ExampleNode.hpp  GroupBox.hpp  Node.cpp  Node.hpp  NodeCreator.cpp  NodeCreator.hpp  NodeManager.cpp  NodeManager.hpp
src/gui/: .clang-tidy  CMakeLists.txt  GlobalActions.hpp  NodeEditorApplication.cpp  NodeEditorApplication.hpp  NodeModel.cpp  NodeModel.hpp  Shortcuts.cpp  Shortcuts.hpp  main.cpp  main.hpp  models.hpp
src/internal/: AppLogic.cpp  AppLogic.hpp  CMakeRC.hpp  CallbackManager.cpp  CallbackManager.hpp  ConfigManager.cpp  ConfigManager.hpp  FlowExecutor.cpp  FlowExecutor.hpp  FlowManager.cpp  FlowManager.hpp  Json.cpp  Json.hpp  NodeManager.cpp  NodeManager.hpp  Pin.cpp  Pin.hpp  Sleep.cpp  Sleep.hpp  Version.hpp
src/util/: Assert.h  AssociatedLegendre.cpp  AssociatedLegendre.hpp  CallbackTimer.cpp  CallbackTimer.hpp  Common.hpp  Config.cpp  Config.hpp  ConfigManager.cpp  ConfigManager.hpp  Constants.hpp  Debug.hpp  Eigen.cpp  Eigen.hpp  ImGui.hpp  ImPlot.cpp  ImPlot.hpp  InsConstants.hpp  InsGravity.cpp  InsGravity.hpp  InsMath.cpp  InsMath.hpp  InsMechanization.cpp  InsMechanization.hpp  InsTime.cpp  InsTime.hpp  InsTransformations.cpp  InsTransformations.hpp  InsUtil.cpp  InsUtil.hpp  Json.cpp  Json.hpp  LinearAlgebra.hpp  Logger.cpp  Logger.hpp  NumericalIntegration.hpp  ScrollingBuffer.hpp  Sleep.cpp  Sleep.hpp  StringUtil.hpp  (+1 more)
test/: CMakeLists.txt  catch_main.cpp
test/data/: config.ini  vectornav.csv  vn310-gnss.csv  vn310-gnss.vnb  vn310-imu.csv  vn310-imu.vnb
test/flow/: VectorNavDataLogger.flow  VectorNavDataReader.flow
test/src/: CatchMatchers.cpp  CatchMatchers.hpp  EigenApprox.hpp  FlowTester.cpp  FlowTester.hpp  Logger.cpp  Logger.hpp
test/util/: InsMechanizationTests.cpp  InsTimeTests.cpp  InsTransformationsTests.cpp  InsUtilTests.cpp  LinearAlgebraTests.cpp  LoggerTests.cpp  ScrollingBufferTests.cpp
tests/: CMakeLists.txt  catch_main.cpp  main.cpp
tests/DataLogger/: VectorNavDataLoggerTest.hpp
tests/data/: vectornav.csv
tests/logs/: vn100.csv
tests/util/: LoggerTests.cpp
(+2723 files in other folders)
